# stash-desktop

./: .gitignore  LICENSE  README.md  index.html  package-lock.json  package.json  tailwind.config.ts  tsconfig.node.json  tsconfig.node.tsbuildinfo  tsconfig.tsbuildinfo  vite.config.js  vite.config.ts
.github/workflows/: build-windows.yml  release.yml
dmg-assets/: Install Instructions.txt
docs/: reddit-feedback.md  scroll-restoration.md
docs/audio/: playback.md
scripts/: build-dmg.sh
src/: App.tsx  index.css  main.tsx  vite-env.d.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: autostart.json  default.json
src-tauri/src/: error.rs  lib.rs  main.rs  state.rs
src-tauri/src/commands/: asset_commands.rs  drag_commands.rs  library_commands.rs  mod.rs  pack_commands.rs  player_commands.rs  plugin_commands.rs  project_commands.rs  settings_commands.rs  update_commands.rs  url_image_commands.rs
src-tauri/src/core/: hasher.rs  indexer.rs  mod.rs  reconciler.rs  scanner.rs  tree.rs  watcher.rs
src-tauri/src/db/: asset_repo.rs  connection.rs  migrations.rs  mod.rs  pack_repo.rs  query_builder.rs
src-tauri/src/metadata/: audio_analyzer.rs  filename_parser.rs  midi_parser.rs  mod.rs  path_parser.rs  preset_parser.rs  project_folder_parser.rs  project_parser.rs
src-tauri/src/models/: asset.rs  mod.rs  pack.rs  plugin.rs  settings.rs
src-tauri/src/search/: fuzzy_matcher.rs  mod.rs  query_processor.rs  synonyms.rs
src/components/: ErrorBoundary.tsx
src/hooks/: useAssets.ts  useCoverUpload.ts  useEditorEngine.ts  useFacetCounts.ts  (+11 more)
(+92 files in other folders)
