[package]
name = "stack"
version = "0.1.1"
description = "Local sample library manager"
authors = ["Stack"]
edition = "2021"

[lib]
name = "stack_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset", "macos-private-api"] }
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-opener = "2"
tauri-plugin-drag = "2"
tauri-plugin-autostart = "2"
tauri-plugin-global-shortcut = "2"

serde = { version = "1", features = ["derive"] }
serde_json = "1"

tokio = { version = "1", features = ["rt-multi-thread", "sync", "time", "macros"] }
async-trait = "0.1"
futures = "0.3"

rusqlite = { version = "0.31", features = ["bundled"] }
r2d2 = "0.8"
r2d2_sqlite = "0.24"

notify = "6"
notify-debouncer-full = "0.3"

walkdir = "2"
xxhash-rust = { version = "0.8", features = ["xxh3"] }
uuid = { version = "1", features = ["v4", "serde"] }

midly = "0.5"
hound = "3.5"
symphonia = { version = "0.5", features = ["mp3", "wav", "flac", "ogg", "aiff"] }

regex = "1"
once_cell = "1"
lazy_static = "1.4"
base64 = "0.22"
thiserror = "1"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
parking_lot = "0.12"

reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "gzip", "brotli", "json"] }
